# Arquitectura

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  comparar_maxlevel.sh
common/: CMakeLists.txt  binario.cpp  binario.hpp  binaryio.hpp  info.cpp  info.hpp  process_functions.cpp  process_functions.hpp  progargs.cpp  progargs.hpp
ftest-aos/: CMakeLists.txt  compress-ftest.cpp  compress-ftest.sh  cutfreq-ftest.sh  maxlevel-ftest.cpp  maxlevel-ftest.sh  resize-ftest.sh
ftest-aos/exp-out-compress/: README.md
ftest-aos/exp-out-cutfreq/: README.md
ftest-soa/: CMakeLists.txt  compress-ftest.cpp  compress-ftest.sh  cutfreq-ftest.sh  maxlevel-ftest.sh  resize-ftest.sh
ftest-soa/exp-out-maxlevel/: README.md
ftest-soa/exp-out-resize/: README.md
imgaos/: CMakeLists.txt  compress.cpp  compress.hpp  cutfreq.cpp  cutfreq.hpp  imgaos.hpp  maxlevel.cpp  maxlevel.hpp  resize.cpp  resize.hpp
imgsoa/: CMakeLists.txt  compress.cpp  compress.hpp  cutfreq.cpp  cutfreq.hpp  imgsoa.hpp  maxlevel.cpp  maxlevel.hpp  resize.cpp  resize.hpp
imtool-aos/: main.cpp
imtool-soa/: main.cpp
in/: README.md
output/: deer-small.ppm  deer.ppm  lake-small.ppm
utest-common/: CMakeLists.txt  binario-test.cpp  binaryio-test.cpp  info-test.cpp  process_functions-test.cpp  progargs-test.cpp
utest-imgaos/: CMakeLists.txt  compress-utest.cpp  cutfreq-utest.cpp  imgaos-test.cpp  maxlevel-utest.cpp  resize-utest.cpp
utest-imgsoa/: CMakeLists.txt  compress-utest.cpp  cutfreq-utest.cpp  maxlevel-utest.cpp  resize-utest.cpp
